--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "wcl-tooltip.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example-build": "cd example && npm uninstall wcl-tooltip && npm install && browserify main.js -o bundle.js"
+    "example-build": "cd example && npm uninstall wcl-tooltip && npm install && browserify main.js -o bundle.js",
+    "release": "npm run example-build; cp wcl-tooltip.{,s}css"
   },
   "author": "matsukawa",
   "license": "MIT"
