--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "example-build": "cd example && npm uninstall wcl-tooltip && npm install && browserify main.js -o bundle.js",
-    "release": "npm run example-build; cp wcl-tooltip.{,s}css"
+    "release": "npm run example-build"
   },
   "author": "matsukawa",
   "license": "MIT"
