--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "main": "wcl-tooltip.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Warning: no test specified\" && exit 0",
     "example-build": "cd example && npm uninstall wcl-tooltip && npm install && browserify main.js -o bundle.js",
     "release": "npm run example-build"
   },
