--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,8 @@ deployment:
     commands:
       - git clone -b gh-pages git@github.com:kawausokun/wcl-tooltip.git
       - cd wcl-tooltip
+      - ls
+      - pwd
       - npm run build
       - git commim -a -m 'Update demo site via CI'
       - git push origin master
