--- a/circle.yml
+++ b/circle.yml
@@ -8,10 +8,11 @@ deployment:
   production:
     branch: master
     commands:
-      - git clone -b gh-pages git@github.com:kawausokun/wcl-tooltip.git ~/.wcl-tooltip
-      - cd ~/.wcl-tooltip
-      - ls
-      - pwd
-      - npm run build
-      - git commim -a -m 'Update demo site via CI'
-      - git push origin master
+      - |
+        git clone -b gh-pages git@github.com:kawausokun/wcl-tooltip.git ~/.wcl-tooltip
+        cd ~/.wcl-tooltip
+        ls
+        pwd
+        npm run build
+        git commim -a -m 'Update demo site via CI'
+        git push origin master
